// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Toolbar instance with center justification 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  justify={2}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Toolbar"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={2}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom={null}
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          iconName="car"
          iconStyle=""
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Toolbar instance with left justification 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  justify={0}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Toolbar"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={0}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom={null}
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          iconName="car"
          iconStyle=""
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Toolbar instance with right justification 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  justify={1}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Toolbar"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={1}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom={null}
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          iconName="car"
          iconStyle=""
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test disabling of a Toolbar instance 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  justify={0}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Toolbar"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={0}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "24px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom={null}
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={true}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          iconName="car"
          iconStyle=""
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test making the Toolbar invisible 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  justify={0}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Toolbar"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={0}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "24px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          bottom={null}
          className="ui-toolbar-element"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          iconName="car"
          iconStyle=""
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="Button"
          onClick={[Function]}
          padding={null}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={false}
          width={null}
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test retrieval of Toolbar props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "justify": 0,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Toolbar",
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
